--- a/test/failure_handler/src/share/conf/linux.properties
+++ b/test/failure_handler/src/share/conf/linux.properties
@@ -68,8 +68,8 @@ environment=\
         memory.vmstat.slabinfo memory.vmstat.disk \
   files \
   locks \
-  net.sockets net.statistics net.ifconfig \
-  screenshot
+  net.sockets net.statistics net.ifconfig
+#  screenshot
 ################################################################################
 users.current.app=id
 users.current.args=-a
