--- a/src/jdk.incubator.jextract/share/classes/jdk/incubator/jextract/tool/resources/RuntimeHelper.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/incubator/jextract/tool/resources/RuntimeHelper.java.template
@@ -29,7 +29,7 @@ public class RuntimeHelper {
             return new LibraryLookup[] { LibraryLookup.ofDefault() };
         } else {
             return Arrays.stream(libNames)
-                .map(libName -> LibraryLookup.ofLibrary(MH_LOOKUP, libName))
+                .map(libName -> LibraryLookup.ofLibrary(libName))
                 .toArray(LibraryLookup[]::new);
         }
     }
