* missed EXPORT for 'func' * missed func call and assertion to check callback was reached. * renamed "resize" to "asArray"

--- a/src/jdk.incubator.jextract/share/classes/jdk/incubator/jextract/tool/resources/Cpointer.java.template
+++ b/src/jdk.incubator.jextract/share/classes/jdk/incubator/jextract/tool/resources/Cpointer.java.template
@@ -22,7 +22,7 @@ public final class Cpointer {
         return MemoryAddress.ofLong((long) handle.get(addr));
     }
 
-    public static MemoryAddress resize(MemoryAddress addr, int numPointers) {
+    public static MemoryAddress asArray(MemoryAddress addr, int numPointers) {
         return MemorySegment.ofNativeRestricted(addr, numPointers * LAYOUT.byteSize(),
                Thread.currentThread(), null, null).baseAddress();
     }
